syntax = "proto3";

package test;

message NestedKey {
  string a = 1;
  string b = 2;
  uint32 c = 3;
  OtherMessage other = 4;
}

message OtherMessage {
  string d = 1;
}

message TestMessage {
  string string = 1;
  bytes bytes = 2;
  uint32 number = 3;
  NestedKey nested_message = 4;
}